src/styles/_movie-card.scss
// For grid setup --
// .slick-slide {
//   height: auto;
// }
// .slick-track {
//   display: flex;
//   flex-direction: row;
//   flex-wrap: nowrap;
//   justify-content: center;
//   align-items: stretch;
// }

.slick-prev:before {
  content: "\1438
  ";
  color: $accentcolor;
  font-size: 30px;
  position: absolute;
  top: -50%;
  left: 0.1rem;
}

.slick-next:before {
  content: "\1433
  ";
  color: $accentcolor;
  font-size: 30px;
  position: absolute;
  top: -50%;
  right: 0.1rem;
}

.sliders-container {
  z-index: 10000;
  @include flex-column;
  position: absolute;

  top: 88vh;
  left: 3rem;
  right: 3rem;

  a {
    color: $primarytxtcolor;
    text-decoration: none;
  }

  a:visited {
    color: $primarytxtcolor;
  }

  a:hover {
    color: $accentcolor;
  }

  h2 {
    padding-top: 2.5rem;
  }
}

.category-container {
  h2 {
    text-align: center;
    padding-bottom: 2rem;
  }

  @include mq($tabletBP) {
    position: absolute;
    top: 8rem;
  }
}

.movies-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.movie-poster {
  img {
    border-radius: 10px;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.3s linear;
  }
  width: 100%;
  height: 100%;
}

.card-container {
  padding-bottom: 2rem;
}

.movie-card {
  @include flex-column;
  position: relative;
  width: 90%;
  max-width: 400px;
  height: 98.5%;
  margin: auto;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.5) 6px 10px 12px;
  overflow: hidden;
}

.movie-info {
  display: none;
  position: absolute;
  right: 0;
  left: 0;
  margin: auto;
  background-color: rgba($backgroundsecondary, 0.9);
  padding: 1.5rem;
  height: 101.5%;
  border-radius: 10px;
  transition: all 0.2s ease-in-out;

  @media (max-width: 400px) {
    padding: 0.75rem;
  }
}

.movie-card:hover img {
  transform: scale(1.2);
}

.card-header {
  @include flex-row;
  justify-content: space-around;
  align-items: center;
}

.movie-card:hover,
.movie-card:active,
.movie-card:focus {
  .movie-info {
    @include flex-column;

    justify-content: flex-start;

    h3 {
      font-size: 1.4rem;
      font-weight: 300;
      text-transform: uppercase;

      @media (max-width: 400px) {
        font-size: 1rem;
      }
    }

    h4 {
      font-weight: 200;
      margin: 0 0 0.5rem 0;
    }

    p {
      font-size: 1.3rem;
      text-align: left;
      margin: 0;
      overflow: hidden;

      @media (max-width: 400px) {
        font-size: 1rem;
      }
    }

    span {
      font-weight: 400;
      font-size: 2rem;

      @media (max-width: 400px) {
        font-size: 1rem;
      }
    }

    .thumbs {
      width: 3rem;
      padding-right: 0.5rem;

      @media (max-width: 400px) {
        font-size: 1rem;
      }
    }

    .rating {
      display: flex;
      justify-content: space-evenly;
      align-items: center;
    }

    .btn-more-info {
      position: absolute;
      bottom: 0.75rem;
      background-color: $accentcolor;
      max-width: 50%;
      align-self: center;
      padding: 0.5rem 1rem;
      border-radius: 1rem;
      text-decoration: none;
      color: $primarytxtcolor;

      @media (max-width: 400px) {
        padding: 0.25rem 0.5rem;
        border-radius: 0.5rem;
      }
    }
  }
}

.movie-card a.btn-more-info:hover {
  box-shadow: 0 0 5px #fff;
}

